<resources>
    <string name="app_name">KeyLocks</string>
    <string name="app_long_name">Signet-Keys and Proof-Locks</string>

    <string name="close_down">Sorry, KeyLocks cannot work without access to your contacts</string>


    <!--passphrase selection-->
    <string name="less_secure_label">Less secure, easier</string>
    <string name="more_secure_lable">More secure, harder</string>
    <string name="passphrase_error">There has been an error, OOPS!</string>
    <string name="passphrase_learn0">Make sure you are in private for the this stage. Press "start" to continue
    and "hide" if you are disturbed</string>
    <string name="passphrase_learn1">Now you must commit your passphrase to memory. </string>
    <string name="passphrase_learn2">Your passphrase is used to activate your private Key, which is kept securely on this
        device</string>
    <string name="rubric_learn_passphrase_title">Learn your passphrase</string>
    <string name="rubric_enter_passphrase">enter your passphrase</string>
    <string name="rubric_try_passphrase">try your passphrase now</string>
    <string name="bad_passphrase_alert_title">Oops! bad passphrase</string>
    <string name="bad_passphrase_alert_body">Looks like you entered the wrong passphrase. Try again?</string>

    <string name="passphrase_learn3">When you are happy that you can remember your passphrase, press "next"</string>
    <string name="passphrase_test">Now see if you can remember your passphrase - enter it below.</string>
    <string name="button_start">start</string>
    <string name="button_hide">hide</string>
    <string name="button_next">next</string>
    <string name="button_got_it">got it</string>
    <string name="button_OK">OK</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="go_back">back</string>
    <string name="clear">clear</string>
    <string name="pause_alert_title">Please wait</string>
    <string name="pause_alert_body">KeyLocks needs to catch up with some background processing...</string>

    <string name="title_activity_create_key">CreateKey</string>
    <string name="sign_in">Sign in with Google</string>


    <string name="import_key">Create your KeyLock from an existing PGP Key pair</string>
    <string name="create_key">Create your new KeyLock from scratch</string>

    <string name="key_choice_create_alert_title">Create a new KeyLock?</string>
    <string name="key_choice_create_alert_body">This will create a KeyLock by generating a new OpenPGP key pair on this device. It may take a minute or so.</string>
    <string name="key_choice_import_alert_title">Import an existing PGP key?</string>
    <string name="key_choice_import_alert_body">Please ensure that the PGP Private Key is already stored in a file on this device\'s filesystem and that you know its passphrase</string>
    <string name="no_external_media_alert_title">No Media</string>
    <string name="no_external_media_alert_body">Maybe you need to mount an SD card in your device?</string>


    <string name="key_import_success_alert_title">Success!</string>
    <string name="key_import_success_alert_body">Successfully read key file for PGP Private Key with ID:</string>
    <string name="key_import_failure_alert_title">Import failed</string>
    <string name="key_import_failure_alert_body">Is the file you chose an Ascii-armored text file containing a supported PGP Private Key?</string>

    <string name="confirm_passphrase_alert_title">Choose this passphrase?</string>
    <string name="identity_added_alert_title"></string>
    <string name="identity_added_alert_body">added to key: </string>


    <!--setup rubrices -->
    <string name="rubric_setup_intro_title">Setting Up  KeyLocks</string>
    <string name="rubric_setup_intro_body">Before you can use KeyLocks, you need to set up your own KeyLock. This should take about five or ten undisturbed minutes. </string>
    <string name="setup_button_go">go for it</string>
    <string name="setup_button_later">later</string>
    <string name="rubric_setup_pgp_title">Creating your KeyLock</string>
    <string name="rubric_setup_pgp_body">KeyLocks is based on OpenPGP. If you already have an OpenPGP key, you can
    import it to KeyLocks; alternatively, KeyLocks will create one for you.</string>
    <string name="rubric_choose_passphrase_title">Choose a passphrase:</string>
    <string name="rubric_choose_passphrase_body_0">Pick a random-word passphrase from the generated list below. </string>
    <string name="rubric_choose_passphrase_body_1">Move the slider for a new list of longer or shorter passphrases.</string>
    <string name="rubric_choose_passphrase_body_2">No need to write it down: in the next step,  KeyLocks will help you to commit it to memory.</string>

    <string name="rubric_test_passphrase_title_0">Test your memory!</string>
    <string name="rubric_test_passphrase_title_1">That\'s good. Try again!</string>
    <string name="rubric_test_passphrase_title_2">One more time...</string>
    <string name="rubric_test_passphrase_title_3">Great! Press "next" to continue</string>

    <string name="button_relearn_label">Remind me...</string>

    <!--Key configuration rubrics-->
    <string name="configure_key_title">Configure KeyLock</string>
    <string name="configure_key_subtitle_prefix">KeyLockID:</string>
    <string name="rubric_configure_key_passphrase">Enter your passphrase to confirm the links:</string>
    <string name="label_key_identities">Select the identities to link to this KeyLock:</string>
    <string name="title_activity_directory">DirectoryActivity</string>

    <string name="keylock_not_ready_alert_title">Your KeyLock isn\'t ready yet!</string>
    <string name="keylock_not_ready_alert_body">KeyLocks hasn\'t finished generating your new KeyLock. Keep on practising your new passphrase while you wait!</string>
    <string name="keylock_created_toast">KeyLock Created!</string>
    <string name="share_rubric">Your new KeyLock is kept in two parts, the Key and the Lock</string>
    <string name="share_rubric_1">The Key is kept securely on this device, but the Lock should be widely shared. Anyone
    can use it to lock stuff so it can only be unlocked with its matching Key, which can only be used with the passphrase you have just learned.</string>
    <string name="share_rubric_2">KeyLocks can publish your Lock (including the identities attached to it) to public keyservers</string>
    <!--Directory nav labels for later on-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KeyLocks</string>
    <string name="nav_header_subtitle">other people\'s Locks</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_vouch">Vouch</string>
    <string name="menu_closest">Closest</string>
    <string name="menu_colleagues">Colleagues</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_family">Family</string>
    <string name="menu_send">Send</string>
    <!--not implemented alert-->
    <string name="feature_not_implemented_alert_title">Not implemented</string>
    <string name="feature_not_implementedd_alerd_body">Sorry, the feature you are trying to access has not yet been implemented</string>
    <!--unforseen error alert-->
    <string name="error_unexpected_alert_title">Unexpected error</string>
    <string name="error_unexpected_alert_body">An unexpected error occurred: </string>
</resources>
