<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/locks_vouch"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_vouch" />
        <item
            android:id="@+id/locks_closest"
            android:icon="@drawable/ic_menu_closest_background"
            android:title="@string/menu_closest" />
        <item
            android:id="@+id/locks_colleagues"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_colleagues" />
        <item
            android:id="@+id/locks_friends"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/locks_family"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_family" />
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
