<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartActivity">

    <TextView
        android:id="@+id/app_short_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textAlignment="center"
        android:padding="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/app_long_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_long_name"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:padding="30sp"
        app:layout_constraintTop_toBottomOf="@+id/app_short_title"/>
    <TextView
        android:id="@+id/start_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:padding="10sp"
        app:layout_constraintTop_toBottomOf="@+id/app_long_title"/>
    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_OK"
        app:layout_constraintTop_toBottomOf="@+id/start_status"/>
</androidx.constraintlayout.widget.ConstraintLayout>