<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/passphrase_wordcount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/passphrase_rubric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/passphrase_wordcount"
        android:text="@string/rubric_enter_passphrase"
       app:layout_constraintBottom_toTopOf="@id/pbox_entry"/>

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passphrase_rubric"
        android:background="@color/passphrase_box_background"
        android:id="@+id/pbox_entry"/>

    <uk.co.platosys.keylocks.widgets.KLButton
        android:id="@+id/pbox_clear_button"
        android:layout_width="160dp"
        app:layout_constraintTop_toBottomOf="@id/pbox_entry"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

    <uk.co.platosys.keylocks.widgets.KLButton
        android:id="@+id/pbox_ok_button"
        android:layout_width="160dp"
       app:layout_constraintTop_toBottomOf="@id/pbox_entry"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/OK" />
</androidx.constraintlayout.widget.ConstraintLayout>