<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ConfigureKeyActivity"
    tools:showIn="@layout/activity_configure_key">
    <TextView
        android:id="@+id/identities_view_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_key_identities"
        app:layout_constraintBottom_toTopOf="@+id/checklist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
   <uk.co.platosys.keylocks.widgets.Checklist
       android:id="@+id/checklist"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintBottom_toTopOf="@+id/rubric_box"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/identities_view_label"/>



    <TextView
        android:id="@+id/rubric_box"
        style="@style/rubric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rubric_configure_key_passphrase"
        app:layout_constraintBottom_toTopOf="@+id/passphrase_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checklist" />

    <uk.co.platosys.keylocks.widgets.PassphraseBox

        android:id="@+id/passphrase_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="91dp"
        app:layout_constraintBottom_toTopOf="@+id/passPhrase2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rubric_box" />
    />

    <uk.co.platosys.keylocks.widgets.KLButton
        android:id="@+id/centre_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAllCaps="true"
        android:text="@string/OK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rubric_box" />

    <uk.co.platosys.keylocks.widgets.KLButton
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/centre_button"
        app:layout_constraintTop_toBottomOf="@id/rubric_box"
        style="@style/alternative_button"/>

    <uk.co.platosys.keylocks.widgets.KLButton
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/centre_button"
        app:layout_constraintTop_toBottomOf="@id/rubric_box"
        style="@style/preferred_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>
