<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"

    tools:context=".activities.SetupActivity">

    <TextView
        android:id="@+id/rubric_title_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rubric_title_height"
        android:text="@string/rubric_setup_intro_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="-2dp"

        style="@style/HeadingTextView"/>

    <ImageView
        android:id="@+id/rubric_illustration_view"
        app:layout_constraintTop_toBottomOf="@+id/rubric_title_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rubric_illustration_height"
        android:src="@mipmap/ic_lock_green_foreground"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/rubric_caption_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_width="match_parent"
        android:layout_height="@dimen/rubric_caption_height"
        android:text="@string/rubric_setup_intro_body"
        app:layout_constraintTop_toBottomOf="@+id/rubric_illustration_view"
        tools:layout_editor_absoluteX="-2dp"
        style="@style/rubric"/>

    <uk.co.platosys.keylocks.widgets.KLButton
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/right_button"
        app:layout_constraintTop_toBottomOf="@id/rubric_caption_view"
        style="@style/alternative_button"/>
    <uk.co.platosys.keylocks.widgets.KLButton
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/centre_button"
        app:layout_constraintTop_toBottomOf="@id/rubric_caption_view"
        style="@style/preferred_button"/>
    <uk.co.platosys.keylocks.widgets.KLButton
        android:id="@+id/centre_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:textAllCaps="true"
        app:layout_constraintRight_toLeftOf="@id/right_button"
        app:layout_constraintLeft_toRightOf="@id/left_button"
        app:layout_constraintTop_toBottomOf="@id/rubric_caption_view"
        style="@style/preferred_button"/>

        <RadioGroup
            android:id="@+id/create_or_import_radio_group"
            app:layout_constraintTop_toBottomOf="@+id/rubric_caption_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                app:layout_constraintTop_toBottomOf="@+id/rubric_caption_view"
                android:id="@+id/new_keylock_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_key" />

            <RadioButton
                app:layout_constraintTop_toBottomOf="@+id/rubric_caption_view"
                android:id="@+id/import_keylock_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_key" />


        </RadioGroup>
    <TextView
        android:id="@+id/less_secure"
        android:layout_width="@dimen/slider_label_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/rubric_caption_view"
        android:layout_below="@id/rubric_caption_view"
        android:text="@string/less_secure_label"
        app:layout_constraintTop_toBottomOf="@id/rubric_caption_view"
        app:layout_constraintBottom_toTopOf="@+id/passphrase_0"
        app:layout_constraintStart_toStartOf="@id/rubric_caption_view"
        app:layout_constraintRight_toLeftOf="@id/passphrase_length_seek_bar"
        app:layout_constraintEnd_toStartOf="@+id/passphrase_length_seek_bar"
        style="@style/bar_end_labels"/>

    <SeekBar
        android:id="@+id/passphrase_length_seek_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="@dimen/slider_width"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/less_secure"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/rubric_caption_view"
        android:layout_toRightOf="@+id/less_secure"
        android:max="10"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/passphrase_0"
        app:layout_constraintEnd_toStartOf="@id/more_secure"
        app:layout_constraintStart_toEndOf="@id/less_secure"
        app:layout_constraintTop_toBottomOf="@id/rubric_caption_view"/>

    <TextView
        android:id="@+id/more_secure"
        android:layout_width="@dimen/slider_label_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/rubric_caption_view"
        android:layout_toRightOf="@+id/passphrase_length_seek_bar"
        android:text="@string/more_secure_lable"
        tools:layout_editor_absoluteX="334dp"
        tools:layout_editor_absoluteY="21dp"
        app:layout_constraintTop_toBottomOf="@id/rubric_caption_view"
        app:layout_constraintBottom_toTopOf="@+id/passphrase_0"
        app:layout_constraintLeft_toRightOf="@id/passphrase_length_seek_bar"
        app:layout_constraintStart_toEndOf="@id/passphrase_length_seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/bar_end_labels"/>
    <TextView
        android:id="@+id/passphrase_0"
        style="@style/PassPhraseTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/less_secure"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="122dp"
        app:layout_constraintBottom_toTopOf="@+id/passphrase_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rubric_caption_view"
        app:layout_constraintTop_toBottomOf="@id/less_secure" />

    <TextView
        android:id="@+id/passphrase_1"
        style="@style/PassPhraseTextBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passphrase_0"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="143dp"
        app:layout_constraintBottom_toTopOf="@+id/passphrase_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rubric_caption_view"
        app:layout_constraintTop_toBottomOf="@id/passphrase_0" />

    <TextView
        android:id="@+id/passphrase_2"
        style="@style/PassPhraseTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passphrase_1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="164dp"
        app:layout_constraintBottom_toTopOf="@+id/passphrase_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rubric_caption_view"
        app:layout_constraintTop_toBottomOf="@id/passphrase_1"/>

    <TextView
        android:id="@+id/passphrase_3"
        style="@style/PassPhraseTextBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passphrase_2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="372dp"
        app:layout_constraintBottom_toTopOf="@+id/passphrase_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rubric_caption_view"
        app:layout_constraintTop_toBottomOf="@id/passphrase_2"/>

    <TextView
        android:id="@+id/passphrase_4"
        style="@style/PassPhraseTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passphrase_3"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/passphrase_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rubric_caption_view"
        app:layout_constraintTop_toBottomOf="@+id/passphrase_3" />

    <TextView
        android:id="@+id/passphrase_5"
        style="@style/PassPhraseTextBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passphrase_4"
        android:layout_marginBottom="1dp"

        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rubric_caption_view"
        app:layout_constraintTop_toBottomOf="@+id/passphrase_4" />


    <!--LEARN PASSPHRASE-->
    <TextView
        android:id="@+id/flashchards"
        style="@style/flashcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rubric_illustration_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rubric_illustration_view" />
    <TextView
        android:id="@+id/full_passphrase"
        style="@style/full_passphrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rubric_illustration_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rubric_illustration_view" />


    <!--TEST PASSPHRASE-->
    <uk.co.platosys.keylocks.widgets.PassphraseBox
        android:id="@+id/passphrase_box"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rubric_combined_height"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/rubric_caption_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rubric_title_view" />


</androidx.constraintlayout.widget.ConstraintLayout>